tests/baselines/reference/amdDependencyCommentName3.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
amdDependencyCommentName3.ts(5,21): error TS2792: Cannot find module 'm2'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== amdDependencyCommentName3.ts (1 errors) ====
    ///<amd-dependency path='bar' name='b'/>
    ///<amd-dependency path='foo'/>
    ///<amd-dependency path='goo' name='c'/>
    
    import m1 = require("m2")
                        ~~~~
!!! error TS2792: Cannot find module 'm2'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    m1.f();